added: CTA, landing page analytics tagging, contact us link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
          <nav class="nav-collapse">
              <ul class="noList">
                  <li> <a href="http://www.micasaupgrades.com">About MiCasa</a></li>
-                 <li> <a href="http://www.micasaupgrades.com">Contact Us</a></li>
+                 <li> <a href="http://www.micasaupgrades.com/#/contact">Contact Us</a></li>
              </ul>
          </nav>
      </div>
